Style: Fix- Improve links to JBX projects (#769)
* Style Fix: misaligned project handle on edit payout modal

* Fix: Add risk indicators to 'Review & Deploy Modal'

* returned ESLINT_NO_DEV_ERRORS=true bypass

* Fix: Remove console logs

* Style:Fix - implement consistent spacing between text and warning indicator

* es lint bypass

* Revert changes to package.json

* revert ES Lint bypass

* Style:Fix- Link to juicebox projects

* remove ESLINT_NO_DEV_ERRORS=true bypass

* remove link icons

* implement PR review changes

* Implement review changes pt2

--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -1,6 +1,26 @@
+.text-primary {
+  color: var(--text-primary);
+}
+
 .hover-text-secondary {
   &:hover {
     color: var(--text-secondary) !important;
     transition: color 250ms;
+  }
+}
+
+hover-text-action-primary {
+  transition: unset;
+
+  &:hover {
+    color: var(--text-action-primary);
+  }
+}
+
+.hover-text-decoration-underline {
+  transition: unset;
+
+  &:hover {
+    text-decoration: underline;
   }
 }
